--- a/app/views/front/project.html.erb
+++ b/app/views/front/project.html.erb
@@ -15,7 +15,7 @@
     </div>
   
     <div class='description'>
-      <%= @project.description %>
+      <%= sanitize @project.description, tags: ['p'] %>
     </div>
   </section>  
 </div>
