fix footer typo

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -41,7 +41,7 @@
 
   <footer class='main'>
     <div class='footer-container'>
-      <%= link_to "Drop me a line if you're intereted in working together.", '#', class: "modal-click footer-contact-link" %>      
+      <%= link_to "Drop me a line if you're interested in working together.", '#', class: "modal-click footer-contact-link" %>      
       <div class='links-container'>
         <% @links.each do |link| %>
           <div class='footer-link'>
