--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,6 +1,7 @@
 header.front{
   width:100%;
   height: 20vh;
+  min-height: 110px;
   margin:0 auto;
   box-sizing: border-box;
   padding-bottom:20px;
@@ -63,6 +64,7 @@ a.bdp-btn{
 @media all and (max-width: 736px) and (orientation: landscape){
   header.front {
     height:20vh;
+    min-height: 110px;
   }
 
 }
