--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,8 +1,8 @@
 section.project{
   margin-top:20px;
-  max-width:400px;
-  margin:0 auto;
-  padding:20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px 8px;
   box-sizing:border-box;
   font-size:14px;
 }
@@ -18,6 +18,7 @@ section.project{
   display:flex; 
   flex-wrap:wrap;
   align-items:center;
+  text-align:center;
   justify-content:flex-start;
   margin:0px auto 50px auto;
 }
@@ -52,7 +53,10 @@ section.project{
 }
 
 section.project .description{
-    margin:10px auto;
+    margin:10px 0;
+    max-width:600px;
+    font-size:12px;
+    line-height:1.5;
 }
 
 @media screen and (min-width: 620px){
