--- a/app/views/front/home.html.erb
+++ b/app/views/front/home.html.erb
@@ -1,47 +1,45 @@
-
-  <section id='projects' class='front-feature'>
-    <h1>Projects</h1>    
-    <% @projects.each do |project| %>
-      <%= content_tag :article, id: project.name.parameterize, class: 'bp-feature' do %>
-          <%= content_tag :header do %>
-            <%= content_tag :h2, project.name %>
-          <% end %>
-          <%= link_to project.short_url, project.site_url, class: 'project-link', target: "new" %>
-          <%= sanitize project.front_description, tags: ['p'] %>
-          <%= link_to "Read More", front_project_path(project), class: 'project-index-link' %>
-      <% end %>
+<section id='projects' class='front-feature' data-dynamic-color="secondary">
+  <h1>Projects</h1>    
+  <% @projects.each do |project| %>
+    <%= content_tag :article, id: project.name.parameterize, class: 'bp-feature' do %>
+        <%= content_tag :header do %>
+          <%= content_tag :h2, project.name %>
+        <% end %>
+        <%= link_to project.short_url, project.site_url, class: 'project-link', target: "new" %>
+        <%= sanitize project.front_description, tags: ['p'] %>
+        <%= link_to "Read More", front_project_path(project), class: 'project-index-link' %>
     <% end %>
+  <% end %>
 
-    <%= link_to "View All Projects + Sites", front_projects_path, class: "projects-view-all bdp-btn" %>    
-  </section>
+  <%= link_to "View All Projects + Sites", front_projects_path, class: "projects-view-all bdp-btn" %>    
+</section>
+
+<section id='technology' class='front-feature' data-dynamic-color="tertiary">
+  <header class='technology-header'>
+    <h1>Technology</h1>
+    <p>Choosing the right platform for the right client and project is key to developing a successful web experience.</p>  
+  </header>    
   
-  <section id='technology' class='front-feature'>
-    <header class='technology-header'>
-      <h1>Technology</h1>
-      <p>Choosing the right platform for the right client and project is key to developing a successful web experience.</p>  
-    </header>    
-    
-    <article id='ruby-on-rails' class='bp-feature'>
-      <h2>Ruby on Rails</h2>
-      <p>I've been working with Ruby on Rails since late 2011.  At the time, I was mostly working on the frontend, using Wordpress as my go-to platform..</p>
-      <p>Rails was my introduction to application development, from MVC (er.. kinda) design patterns, to testing and automated deployings, version control, and everything else under the sun that goes into <%= link_to "web applications", 'http://s3.amazonaws.com/maptini.com/app/public/system/images/38573/original/52D6FC49-085A-47F8-8E1B-83740ABBD807.png?1333665118', target: "new" %>.</p>
-    </article>
-    
-    <article id='javascript' class='bp-feature'>
-      <h2>JavaScript</h2>
-      <p>So many JavaScript frameworks, which to choose?  I've settled on React.js for now, but vue.js is certainly appealing.  "The Langauge of the Web" is becoming much more as technologies like React Native allow us to write mobile apps in JS.  Especially with ES6/7 busting onto the scene, it's a good time to learn some JS.</p>
-    </article>
-    
-    <article id='wordpress' class='bp-feature'>
-      <h2>Wordpress</h2>
-      <p>Wordpress is a great platform to develop on and continues to mature.</p>
-      <p>Many people are familiar with its admin interface, which makes it a great choice as a backend for many projects.  Asides from Wordpress' extensive plugin environment, The Bedrock framework, Twig templating, and other methods for separating logic from presentation and markup are all great developments.</p>
-    </article>
-    
-    <article id='elixir' class='bp-feature'>
-      <h2>Elixir / Phoenix - The Future?</h2>
-      <p>I've only had a few hours to check out Elixir, but I am thrilled with the language's powerful pattern matching, embrace of concurrency, and functional design.  Both Elixir and its star framework Phoenix seem fast and practical, and I can't wait to dive into both.</p>
-      
-    </article>
-  </section>
+  <article id='ruby-on-rails' class='bp-feature'>
+    <h2>Ruby on Rails</h2>
+    <p>I've been working with Ruby on Rails since late 2011.  At the time, I was mostly working on the frontend, using Wordpress as my go-to platform..</p>
+    <p>Rails was my introduction to application development, from MVC (er.. kinda) design patterns, to testing and automated deployings, version control, and everything else under the sun that goes into <%= link_to "web applications", 'http://s3.amazonaws.com/maptini.com/app/public/system/images/38573/original/52D6FC49-085A-47F8-8E1B-83740ABBD807.png?1333665118', target: "new" %>.</p>
+  </article>
+  
+  <article id='javascript' class='bp-feature'>
+    <h2>JavaScript</h2>
+    <p>So many JavaScript frameworks, which to choose?  I've settled on React.js for now, but vue.js is certainly appealing.  "The Langauge of the Web" is becoming much more as technologies like React Native allow us to write mobile apps in JS.  Especially with ES6/7 busting onto the scene, it's a good time to learn some JS.</p>
+  </article>
+  
+  <article id='wordpress' class='bp-feature'>
+    <h2>Wordpress</h2>
+    <p>Wordpress is a great platform to develop on and continues to mature.</p>
+    <p>Many people are familiar with its admin interface, which makes it a great choice as a backend for many projects.  Asides from Wordpress' extensive plugin environment, The Bedrock framework, Twig templating, and other methods for separating logic from presentation and markup are all great developments.</p>
+  </article>
+  
+  <article id='elixir' class='bp-feature'>
+    <h2>Elixir / Phoenix</h2>
+    <p>I've only had a few hours to check out Elixir, but I am thrilled with the language's powerful pattern matching, embrace of concurrency, and functional design.  Both Elixir and its star framework Phoenix seem fast and practical, and I can't wait to dive into both.</p>      
+  </article>
+</section>
 
