--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,4 +1,8 @@
 footer.main{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
   min-height:15vh;
   background-color:#484343;
   color:white;
