meh, font size iphone select fix

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -39,7 +39,6 @@ a, a:focus, a:active, a:visited{
   font-family: 'acier-bat-solid';
 }
   
-
 .parsley-errors-list{
    padding:10px 0; 
 }
@@ -47,7 +46,6 @@ a, a:focus, a:active, a:visited{
 .bdp-btn{
   display: inline-block;
   padding: 3px 3px 3px 5px;
-
   color: black;
   text-decoration: none;
   background:white;
@@ -74,7 +72,7 @@ a, a:focus, a:active, a:visited{
 
 // https://stackoverflow.com/a/16255670/791026
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-select:focus, textarea:focus, input:focus {
+select {
         font-size: 16px;
     }
 }
