add resume uploader and display

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -3,7 +3,7 @@ footer.main{
   left: 0;
   bottom: 0;
   right: 0;
-  min-height:15vh;
+  min-height:150px;
   background-color:#484343;
   color:white;
 }
@@ -58,3 +58,4 @@ a.footer-contact-link{
   
 
 }
+
