--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -13,7 +13,7 @@ html{
 }
 
 body{
-  margin:0 0 15vh;
+  margin:0 0 150px;
 }
 
 h1{
@@ -75,4 +75,9 @@ a, a:focus, a:active, a:visited{
 select {
         font-size: 16px;
     }
+}
+@media (min-width: 768px) {
+  select {
+    font-size: 10px;
+  }
 }
