--- a/app/views/front/_header.html.erb
+++ b/app/views/front/_header.html.erb
@@ -6,7 +6,7 @@
   <% end %>
   
   <div class='header-quick-links'>
-    <%= link_to "resume", "/ben_polinsky_resume_april_2017.pdf", target: 'new', class: "email-me bdp-btn" %>
+    <%= link_to "resume", @resume_path, target: 'new', class: "email-me bdp-btn" %>
     <%= link_to "Email", "mailto:benjamin.polinsky@gmail.com", class: "email-me bdp-btn" %>      
   </div>
   <%= select_tag "change_scheme", options_for_select(["default", "morning", "night", "afternoon", "nightOwl"]), {class: "change-scheme"} %>
