--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,13 +11,12 @@
 </head>
 <body class="<%= body_class %>">
 <header class='admin-header'>
-  <nav class='navbar bg-inverse navbar-dark main'>
+  <nav class='navbar navbar-toggleable-sm bg-inverse navbar-dark main'>
     <div class='nav navbar-nav'>
      
       <%= active_link_to "Projects", main_app.administration_projects_path, class: "nav-item nav-link" %>
       <%= active_link_to "Links", main_app.administration_links_path, class: "nav-item nav-link" %>
-      <%# abstract_resource_admin_nav %>
-      <%# active_link_to "Custom Fields", bp_custom_fields.root_path, class: "nav-item nav-link" %>
+      <%= active_link_to "Resumes", main_app.administration_resumes_path, class: 'nav-item nav-link' %>
       <%= link_to "Sign Out", main_app.destroy_admin_session_path, method: :delete, class: "nav-item nav-link" %>
       <%= active_link_to "Admins", main_app.edit_administration_admin_path(Admin.first), class: "nav-item nav-link" %>
     </div> 
