fix WordPress casing

--- a/app/views/front/home.html.erb
+++ b/app/views/front/home.html.erb
@@ -22,7 +22,7 @@
   
   <article id='ruby-on-rails' class='bp-feature'>
     <h2>Ruby on Rails</h2>
-    <p>I've been working with Ruby on Rails since late 2011.  At the time, I was mostly working on the frontend, using Wordpress as my go-to platform..</p>
+    <p>I've been working with Ruby on Rails since late 2011.  At the time, I was mostly working on the frontend, using WordPress as my go-to platform..</p>
     <p>Rails was my introduction to application development, from MVC (er.. kinda) design patterns, to testing and automated deployings, version control, and everything else under the sun that goes into <%= link_to "web applications", 'http://s3.amazonaws.com/maptini.com/app/public/system/images/38573/original/52D6FC49-085A-47F8-8E1B-83740ABBD807.png?1333665118', target: "new" %>.</p>
   </article>
   
@@ -32,9 +32,9 @@
   </article>
   
   <article id='wordpress' class='bp-feature'>
-    <h2>Wordpress</h2>
-    <p>Wordpress is a great platform to develop on and continues to mature.</p>
-    <p>Many people are familiar with its admin interface, which makes it a great choice as a backend for many projects.  Asides from Wordpress' extensive plugin environment, The Bedrock framework, Twig templating, and other methods for separating logic from presentation and markup are all great developments.</p>
+    <h2>WordPress</h2>
+    <p>WordPress is a great platform to develop on and continues to mature.</p>
+    <p>Many people are familiar with its admin interface, which makes it a great choice as a backend for many projects.  Asides from WordPress' extensive plugin environment, The Bedrock framework, Twig templating, and other methods for separating logic from presentation and markup are all great developments.</p>
   </article>
   
   <article id='elixir' class='bp-feature'>
